--- a/doc/src/features.page
+++ b/doc/src/features.page
@@ -9,36 +9,31 @@ h1. Features
 
 <div class="summary">
 <p>Gecode/R provides access to many, but not all, of "Gecode's 
-features":http://www.gecode.org/gecode-doc-latest/modules.html.</p>
+features":http://www.gecode.org/gecode-doc-search-1.3.1/modules.html.</p>
 </div>
 
 h2. Supported Gecode features 
 
-Note that, while Gecode/R uses Gecode 1.3.1, the following links point to the
-Gecode 2.0 documentation. Hence the linked documentation does not correctly 
-reflect the constraints supported. In most cases the difference is small. Refer 
-to the corresponding Gecode 1.3.1 documentation for a more accurate view.
+The following things are supported by Gecode/R.
 
-* Boolean variables with the following constraints
-** "Simple relation":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntRelBool.html
-** "Linear":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntLinearBool.html
+* "Boolean variables and constraints":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntBool.html
 * Finite domain integer variables with the following constraints
-** "Arithmetic":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntArith.html
-** "Cardinality":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntCard.html without global cardinality constraints
-** "Channel":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntChannel.html
-** "Distinct":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntDistinct.html
-** "Domain":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntDomain.html
-** "Element":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntElement.html
-** "Linear":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntLinearInt.html
-** "Simple relation":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntRelInt.html
-** "Sorting":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntSorted.html
+** "Arithmetic":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntArith.html
+** "Cardinality":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntCard.html without global cardinality
+** "Channel":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntChannel.html
+** "Distinct":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntDistinct.html
+** "Domain":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntDomain.html
+** "Element":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntElement.html
+** "Linear":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntLinear.html
+** "Simple relation":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntRel.html
+** "Sorting":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntSort.html
 * Finite integer sets with the following constraints
-** Distinct
-** "Domain":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetDom.html
-** "Connection constraints to finite domain variables":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetConnect.html
-** "Relation":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetRel.html
-** "Set selection":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetSelection.html
-** "Set operation":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetRelOp.html
+** "Distinct":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetDistinct.html
+** "Domain":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetDom.html
+** "Connection constraints to finite domain variables":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetConnect.html
+** "Relation":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetRel.html
+** "Set selection":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetSelection.html
+** "Set operation":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetRelOp.html
 * Branching selection
 * Depth first search
 * Reification and propagation strength
@@ -47,16 +42,15 @@ to the corresponding Gecode 1.3.1 documentation for a more accurate view.
 h2. Features not supported
 
 The following are some notable features that are included in Gecode but _not_
-in Gecode/R (but might be in the future). Note that the list is based on the
-Gecode 1.3.1 feature set.
+in Gecode/R (but might be in the future).
 
 * Unsupported integer constraints
-** Regular
-** "Global cardinality":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntCard.html
-** "Scheduling":http://www.gecode.org/gecode-doc-latest/group__TaskModelIntScheduling.html
+** "Regular":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntRegular.html
+** "Global cardinality":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntCard.html
+** "Scheduling":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntIntScheduling.html
 * Unsupported set constraints
-** "Convexity":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetConvex.html
-** "Sequence":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetSequence.html
-** "Projector":http://www.gecode.org/gecode-doc-latest/group__TaskModelSetProjector.html
+** "Convexity":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetConvex.html
+** "Sequence":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetSequence.html
+** "Projector":http://www.gecode.org/gecode-doc-search-1.3.1/group__TaskIntSetProjector.html
 * Limited discrepancy search
 * Custom propagators and branching strategies
