--- a/doc/src/documentation/constraints/boolean-constraints.page
+++ b/doc/src/documentation/constraints/boolean-constraints.page
@@ -72,3 +72,15 @@ bools.disjunction.must == b1 | b2
 </ruby>
 
 The part after @must@ supports everything that single boolean variables support.
+
+h2. Tuple
+
+The tuple constraints can be used to constrain arrays of boolean variable to 
+only take values in a specified set of tuples.
+
+<ruby>
+bools.must_be.in [[true, false, true], [false, false, true]]
+</ruby>
+
+The above constrains @bools@, containing three boolean variables, to either 
+be true, false, true, or false, false, true.
