The 404-error page now gives an absolute path to its style sheet so that it doesn't break when not rendered in the root.

--- a/doc/src/404-error.page
+++ b/doc/src/404-error.page
@@ -3,6 +3,7 @@ title: Error page
 long_title: 404 Not Found
 inMenu: false
 description: The page couldn't be found. 
+additionalHeadContents: '<link rel="stylesheet" type="text/css" href="/{resource: webgen-css}" media="screen" />'
 ---
 
 h1. Page Not Found
