Switched the name of the "long_title" meta info to camel-case to conform to the rest of the webgen.

--- a/doc/src/details/changes.page
+++ b/doc/src/details/changes.page
@@ -1,7 +1,7 @@
 ---
 title: Changes
 useERB: true
-long_title: Changes made to Gecode/R
+longTitle: Changes made to Gecode/R
 inMenu: true
 description: A changelog of changes made to Gecode/R. Shows when support for various constraints were added.
 ---
