--- a/doc/src/details/index.page
+++ b/doc/src/details/index.page
@@ -1,6 +1,6 @@
 ---
 title: Project details
-long_title: The Gecode/R community, bringing constraint programming to Ruby
+longTitle: The Gecode/R community, bringing constraint programming to Ruby
 inMenu: true
 description: How to get in touch with the Gecode/R community. Ask questions about Gecode/R and constraint programming.
 ---
