--- a/doc/src/sitemap.page
+++ b/doc/src/sitemap.page
@@ -1,6 +1,6 @@
 ---
 title: Sitemap
-long_title: Sitemap of Gecode/R project pages
+longTitle: Sitemap of Gecode/R project pages
 inMenu: false
 description: A sitemap showing all the pages of the site.
 ---
