--- a/doc/src/documentation/constraints/boolean-constraints.page
+++ b/doc/src/documentation/constraints/boolean-constraints.page
@@ -1,6 +1,6 @@
 ---
 title: Boolean Constraints
-long_title: Boolean constraints supported by Gecode/R
+longTitle: Boolean constraints supported by Gecode/R
 inMenu: true
 description: The different boolean constraints available in Gecode/R for use when modelling in Ruby.
 ---
