--- a/doc/src/documentation/constraints/quick-reference.page
+++ b/doc/src/documentation/constraints/quick-reference.page
@@ -49,7 +49,7 @@ h2. Boolean constraints
 | domain | {quickrefTemplate: bool_expression.must_be.true } | must_be.false also works |
 | equality | {quickrefTemplate: bool_expression_1.must == bool_expression_2 } | |
 | implication | {quickrefTemplate: bool_expression_1.must.imply(bool_expression_2) } | |
-| channel | {quickrefTemplate: bool.must == int } | no negation nor reification, bool and int can be swapped |
+| channel | {quickrefTemplate: bool_var.must == int_var } | no negation nor reification, bool and int can be swapped |
 
 h2. Boolean enumeration constraints
 
@@ -57,7 +57,7 @@ h2. Boolean enumeration constraints
 | conjunction | {quickrefTemplate: bool_enum.conjunction.must... } | bool composite |
 | disjunction | {quickrefTemplate: bool_enum.disjunction.must... } | bool composite |
 | tuple | {quickrefTemplate: bool_enum.must_be.in tuples } | no negation nor reification |
-| channel | {quickrefTemplate: bool_enum.must.channel int_var } | no negation nor reification |
+| channel | {quickrefTemplate: bool_enum.must.channel int_var } | no negation nor reification, bool enum and int can be swapped |
 
 h2. Set constraints
 
