The website's examples now require the Gecode/R gem rather than a helper file that the user doesn't have.

--- a/doc/src/examples/n-queens.page
+++ b/doc/src/examples/n-queens.page
@@ -17,7 +17,12 @@ Replace "8" with "n" to get the n-queens puzzle.
 
 h2. Code
 
-{includeFile: {filename: ../../../example/queens.rb, escapeHTML: false, processOutput: false, highlight: ruby}}
+<notextile> 
+  <% example_name = 'queens' %>
+  <% contents = File.readlines("../example/#{example_name}.rb")[1..-1].join %>
+  <% contents = "require 'rubygems'#{$/}require 'gecoder'#{$/}" + contents %>
+  <%= @plugin_manager['Misc/SyntaxHighlighter'].highlight(contents, 'ruby') %> 
+</notextile>
 
 h3. Output
 
