--- a/doc/src/examples/send-most-money.page
+++ b/doc/src/examples/send-most-money.page
@@ -25,7 +25,12 @@ sought.
 
 h2. Code
 
-{includeFile: {filename: ../../../example/send_most_money.rb, escapeHTML: false, processOutput: false, highlight: ruby}}
+<notextile> 
+  <% example_name = 'send_most_money' %>
+  <% contents = File.readlines("../example/#{example_name}.rb")[1..-1].join %>
+  <% contents = "require 'rubygems'#{$/}require 'gecoder'#{$/}" + contents %>
+  <%= @plugin_manager['Misc/SyntaxHighlighter'].highlight(contents, 'ruby') %> 
+</notextile>
 
 h2. Output
 
