The sidebar navigation now includes shortcuts to the current page's sections.

--- a/doc/src/styles.css
+++ b/doc/src/styles.css
@@ -152,6 +152,10 @@ body {
 }
 #sidebar ul li {
   margin: 1em;
+  margin-left: 0.6em;
+}
+#sidebar ul li li {
+  margin: 0.6em;
 }
 #sidebar ul li a {
   padding: 0.5em 0;
