Fixed the broken tables.

--- a/doc/src/documentation/constraints/quick-reference.page
+++ b/doc/src/documentation/constraints/quick-reference.page
@@ -42,7 +42,7 @@ h2. Integer enumeration constraints
 | sort | {quickrefTemplate: int_enum_1.must_be.sorted } | |
 | sort | {quickrefTemplate: int_enum_1.must_be.sorted(:as => int_enum_2, :order => int_enum_3) } | :order is optional, no negation nor reification |
 | tuple | {quickrefTemplate: int_enum.must_be.in tuples } | no negation nor reification |
-| regexp | {quickrefTemplate: int_enum.must.match integer_regexp } | no negation nor reification
+| regexp | {quickrefTemplate: int_enum.must.match integer_regexp } | no negation nor reification |
 
 h2. Boolean constraints
 
@@ -59,7 +59,7 @@ h2. Boolean enumeration constraints
 | disjunction | {quickrefTemplate: bool_enum.disjunction.must... } | bool composite |
 | tuple | {quickrefTemplate: bool_enum.must_be.in tuples } | no negation nor reification |
 | channel | {quickrefTemplate: bool_enum.must.channel int_var } | no negation nor reification, bool enum and int can be swapped |
-| regexp | {quickrefTemplate: bool_enum.must.match bool_regexp } | no negation nor reification
+| regexp | {quickrefTemplate: bool_enum.must.match bool_regexp } | no negation nor reification |
 
 h2. Set constraints
 
