--- a/doc/src/documentation/constraints/quick-reference.page
+++ b/doc/src/documentation/constraints/quick-reference.page
@@ -48,9 +48,9 @@ h2. Boolean constraints
 
 |_. name |_. template |_. notes |
 | domain | {quickrefTemplate: bool_expression.must_be.true } | must_be.false also works |
-| equality | {quickrefTemplate: bool_expression_1.must == bool_expression_2 } | |
+| equality | {quickrefTemplate: bool_expression_1.must <notextile>==</notextile> bool_expression_2 } | |
 | implication | {quickrefTemplate: bool_expression_1.must.imply(bool_expression_2) } | |
-| channel | {quickrefTemplate: bool_var.must == int_var } | no negation nor reification, bool and int can be swapped |
+| channel | {quickrefTemplate: bool_var.must <notextile>==</notextile> int_var } | no negation nor reification, bool and int can be swapped |
 
 h2. Boolean enumeration constraints
 
